@@ -19,7 +19,11 @@ import com.powsybl.sld.model.nodes.BusNode;
 import com.powsybl.sld.model.nodes.ConnectivityNode;
 import com.powsybl.sld.model.nodes.Node;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -89,8 +93,8 @@ public final class WireConnection {
     private static WireConnection searchBestAnchorPoints(Point coord1, Point coord2,
                                                          List<AnchorPoint> anchorPoints1,
                                                          List<AnchorPoint> anchorPoints2) {
-        AnchorPoint betterAnchorPoint1 = anchorPoints1.get(0);
-        AnchorPoint betterAnchorPoint2 = anchorPoints2.get(0);
+        AnchorPoint betterAnchorPoint1 = anchorPoints1.getFirst();
+        AnchorPoint betterAnchorPoint2 = anchorPoints2.getFirst();
 
         double currentDistance = coord1.getShiftedPoint(betterAnchorPoint1).distanceSquare(
             coord2.getShiftedPoint(betterAnchorPoint2));
@@ -154,31 +158,32 @@ public final class WireConnection {
         double yB = pointB.getY();
 
         switch (anchorPointA.getOrientation()) {
-            case VERTICAL:
+            case VERTICAL -> {
                 if (anchorPointB.getOrientation() == AnchorOrientation.VERTICAL) {
                     double mid = (yA + yB) / 2;
                     pol.addAll(Point.createPointsList(xA, mid, xB, mid));
                 } else {
                     pol.add(new Point(xA, yB));
                 }
-                break;
-            case HORIZONTAL:
+            }
+            case HORIZONTAL -> {
                 if (anchorPointB.getOrientation() == AnchorOrientation.HORIZONTAL) {
                     double mid = (xA + xB) / 2;
                     pol.addAll(Point.createPointsList(mid, yA, mid, yB));
                 } else {
                     pol.add(new Point(xB, yA));
                 }
-                break;
-            case NONE:
+            }
+            case NONE -> {
                 if (anchorPointB.getOrientation() == AnchorOrientation.HORIZONTAL) {
                     pol.add(new Point(xA, yB));
                 } else {
                     pol.add(new Point(xB, yA));
                 }
-                break;
-            default:
-                break;
+            }
+            default -> {
+                // Do nothing
+            }
         }
     }
 }
